...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Profile"
        view.backgroundColor = .gray
        setupViews()
    }
    
    private func setupViews(){
        view.addSubview(photo)
...
